# vkbottle_bot_template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
docker/: redis.conf
src/: __init__.py  __main__.py  app.py  bot.py  configurator.py  initialize.py  modules.py  redis.py
src/blueprints/: __init__.py  admin.py  main.py
src/configurator/: __init__.py  model.py  utils.py
src/custom/: StateDispenser.py  __init__.py
src/database/: __init__.py
src/database/models/: __init__.py  db.py  user.py
src/database/repositories/: __init__.py  user.py
src/middlewares/: NoBotMiddleware.py  PrepareCommandMiddleware.py  UnknownCommandMiddleware.py  __init__.py
src/rules/: IsAdminRule.py  __init__.py
src/utils/: __init__.py  loop.py
src/web/: __init__.py  callback.py
tests/: defaults.py  test_config.py  test_config_model.py  test_middleware.py  test_rules.py
